deployment/meshed_app.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: prodcatalog
  namespace: prodcatalog-ns
spec:
  awsName: prodcatalog.prodcatalog-ns.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: prodcatalog-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: proddetail
  namespace: prodcatalog-ns
spec:
  awsName: proddetail.prodcatalog-ns.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: proddetail-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: frontend-node
  namespace: prodcatalog-ns
spec:
  awsName: frontend-node.prodcatalog-ns.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: frontend-node
---
